src/objects/PBS_Training_Plan_Section_Item__c.object
<CustomObject>
    <fields>
        <fullName>Duration__c</fullName>
        <formula>Learning__r.Duration__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration (minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duration_hours__c</fullName>
        <formula>Learning__r.Duration_hours__c</formula>
        <label>Duration (hours)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Learning__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Learning</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only published learnings can be added to a training plan</errorMessage>
            <filterItems>
                <field>PBS_Learning__c.Is_Published_Formula__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>NOTE: Only published learnings can be associated to a training plan</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>PBS_Learning__c</referenceTo>
        <relationshipName>Training_Plan_Section_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Optional__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Optional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Training_Plan_Section__c</fullName>
        <label>Training Plan Section</label>
        <referenceTo>PBS_Training_Plan_Section__c</referenceTo>
        <relationshipName>Training_Plan_Section_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>PBS_Training Plan Section Item</label>
    <nameField>
        <displayFormat>TPSI-{0000000}</displayFormat>
        <label>Training Plan Section Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PBS_Training Plan Section Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>